[gd_scene load_steps=2 format=3 uid="uid://d3ubhvjifhpoo"]

[ext_resource type="Script" path="res://GraphNode.gd" id="1_x2ams"]

[node name="GraphNode" type="GraphNode"]
offset_right = 218.0
offset_bottom = 154.0
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_x2ams")

[node name="ind0" type="Container" parent="."]
layout_mode = 2
size_flags_stretch_ratio = 0.0
mouse_filter = 2

[node name="div" type="VSplitContainer" parent="ind0"]
layout_mode = 2

[node name="Belts" type="VBoxContainer" parent="ind0/div"]
layout_mode = 2

[node name="ThroughputLabel" type="Label" parent="ind0/div/Belts"]
layout_mode = 2
text = "Throughput"

[node name="ThroughputBeltDisplay" type="HBoxContainer" parent="ind0/div/Belts"]
layout_mode = 2

[node name="ShowMore" type="Button" parent="ind0/div/Belts"]
layout_mode = 2
toggle_mode = true
text = "Show more"

[node name="DetailedInfo" type="VBoxContainer" parent="ind0/div/Belts"]
visible = false
layout_mode = 2

[node name="InputLabel" type="Label" parent="ind0/div/Belts/DetailedInfo"]
layout_mode = 2
text = "Input"

[node name="InputBeltDisplay" type="HBoxContainer" parent="ind0/div/Belts/DetailedInfo"]
layout_mode = 2

[node name="OutputLabel" type="Label" parent="ind0/div/Belts/DetailedInfo"]
layout_mode = 2
text = "Max Output"

[node name="OutputBeltDisplay" type="HBoxContainer" parent="ind0/div/Belts/DetailedInfo"]
layout_mode = 2

[node name="Delete" type="Button" parent="ind0/div"]
layout_mode = 2
toggle_mode = true
text = "delete"

[connection signal="sort_children" from="ind0" to="." method="_on_ind_0_sort_children"]
[connection signal="toggled" from="ind0/div/Belts/ShowMore" to="." method="_on_show_more_toggled"]
[connection signal="focus_exited" from="ind0/div/Delete" to="." method="_on_delete_focus_exited"]
[connection signal="toggled" from="ind0/div/Delete" to="." method="_on_delete_toggled"]
